[Master] 2019-06-15-1. 1. 修正Crontab在Container裡面沒有作用的問題 2. 更改執行Youtube-dl的方式，改為Python 3. 新增Playlist清單

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,12 @@ services:
     build: .
     image: musicsync-python:v1
     restart: always
+    environment:
+      TZ: "Asia/Taipei"
     volumes:
       - ./src:/usr/src/app
       - music:/usr/src/music
+      #- /etc/localtime:/etc/localtime:ro
+      #- /etc/timezone:/etc/timezone:ro
 volumes:
   music: {}
